refactor & fpdate command - v1.1.0

--- a/src/config.yml
+++ b/src/config.yml
@@ -3,13 +3,16 @@
 # Date format uses letter codes, like the following ones.
 # - M for month     - d for day         - y for year
 # - H for hours     - m for minutes     - s for seconds
-date_format: MM/dd/yyyy HH:mm:ss
+date_format: dd/MM/yyyy HH:mm:ss
 
-# If you change the messages, make sure to keep variables %1s and %2s as they are, otherwise the plugin will return an error.
-message_me: 'You joined the server on %1s'
-message_other: '%1s joined the server on %2s'
+# If you change the messages, make sure to keep variables %s as they are, otherwise the plugin will return an error.
+message_me: "Tu as rejoint le serveur le %s"
+message_other: "%s a rejoint le serveur le %s"
 
-error_not_found: 'Player not found.'
+players_on_date: "%s joueurs ont rejoint le serveur à cette date : %s"
+none_on_date: "Aucun joueur n'a rejoint le serveur à cette date."
+
+error_not_found: "Joueur non trouvé."
 
 # Whether or not it's possible to see the join date of offline players.
 offline_players: true
