--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,33 +1,39 @@
 main: fr.peaceandcube.pacfirstplayed.PACFirstPlayed
 name: PACFirstPlayed
 description: A plugin showing the date you joined the server
-version: 1.2.1
+version: ${version}
 author: YanisBft
 website: https://github.com/PeaceAndCubeMC/PACFirstPlayed
-api-version: 1.13
-
-depend: [pAcPI]
+api-version: 1.19
 
 commands:
   firstplayed:
     description: Shows when you joined the server
     aliases: fp
-    permission: firstplayed.me
+    permission: peaceandcube.firstplayed.me
     permission-message: §cYou do not have the permission to use this command.
     usage: "§eUsage: §r/firstplayed [<player>]"
   fpdate:
     description: Shows who joined the server on a date
-    permission: firstplayed.date
+    permission: peaceandcube.fpdate
     permission-message: §cYou do not have the permission to use this command.
     usage: "§eUsage: §r/fpdate <date>"
+  pacfirstplayed:
+    description: Reloads the plugin
+    permission: peaceandcube.pacfirstplayed
+    permission-message: §cYou do not have the permission to use this command.
+    usage: "§eUsage: §r/pacfirstplayed reload"
 
 permissions:
-  firstplayed.me:
+  peaceandcube.firstplayed.me:
     description: Allows you to get your own join date
     default: op
-  firstplayed.other:
+  peaceandcube.firstplayed.other:
     description: Allows you to get another player join date
     default: op
-  firstplayed.date:
+  peaceandcube.fpdate:
     description: Allows to see who joined the server on a date
+    default: op
+  peaceandcube.pacfirstplayed:
+    description: Allows you to use /pacfirstplayed command
     default: op
